# diggy

./: .coverage  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  README.md  design-decisions.md  docker-compose.override.yml  docker-compose.ssl.yml  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt  to_do.md  watched_playlists.md
.claude/: settings.local.json
.claude/commands/: deploy_verify.md  refonte_page.md  roadmap_status.md  roadmap_update.md  schema_doc.md  work_manager.md
.github/workflows/: deploy.yml
docs/: F3_GOOGLE_OAUTH_PROMPT.md  PLAN_HTTPS.md  PROJECT_STATUS_2026-07-02.md  ROADMAP.md  ROADMAP_MULTIUSER.md  database-schema.md  deezer_exploration.ipynb  deezer_vs_rekordbox.ipynb  design-audit.md  detail-pages-audit.md  rekordbox_exploration.ipynb  rekordbox_relocate.ipynb  restore.md  similarity_calibration.ipynb
docs/.ipynb_checkpoints/: similarity_calibration-checkpoint.ipynb
docs/audit_2026-07/: A1_backend.md  A2_database.md  A3_workers.md  A4_frontend.md  A5_infra.md  A6_securite_tests.md  A7_hygiene_repo.md  CONSOLIDATED.md  DECISIONS.md  _inventory.md
docs/completed/: BRIEF_DESIGN_GENRES.md  C0_agent_prompt.md  C1-AB_agent_prompt.md  C1-C_agent_prompt.md  C1-D_agent_prompt.md  PROMPT-A1-service-layer.md  PROMPT-A2-refactor-workers.md  PROMPT-A3-frontend-perf.md  PROMPT-D1-design-fix.md  PROMPT-D5-composants-partages.md  R1-ST1_agent_prompt.md  R1-ST2_agent_prompt.md  R1-ST3_agent_prompt.md  R1-ST4_agent_prompt.md  R1-ST5_agent_prompt.md  ROADMAP_2026-06-backlog.md  ROADMAP_2026-06.md  ROADMAP_AUDIT_2026-07.md  ROADMAP_MULTIUSER.md  ROADMAP_chantiers_termines_2026-07.md  brief_C2d_bareme_v2.md  deezer_exploration.ipynb  eval-golden-set-README.md  rekordbox_exploration.ipynb  rekordbox_relocate.ipynb
docs/eval/: README.md
docs/refonte-ui/: INDEX.md  TRANSVERSE.md  _TEMPLATE.md  admin.md  artist-detail.md  artists-list.md  catalog.md  genre-detail.md  genres-list.md  hub.md  login.md  playlist-detail.md  playlists-list.md  radar.md  set-detail.md  sets-list.md  track-detail.md
scripts/: import_taxonomy.py
scripts/data/: canonical_nodes.csv
server/: .coverage  .dockerignore  Dockerfile
server/api/: Dockerfile  auth.py  auth_middleware.py  catalog.py  celery_client.py  database.py  deezer_enrich.py  dependencies.py  main.py  models.py  opinion_sync.py  rate_limit.py  requirements.txt  schemas.py  storage.py  utils.py
server/deezer/: extractor.py  sync_checker.py
server/frontend/: Dockerfile  eslint.config.js  index.html  nginx.prod.conf  package-lock.json  package.json  vite.config.js
tests/: TESTING.md
worker/: apply_sync.py  check_sync.py  crawl_radar.py  import_rekordbox.py  pyrekordbox.ipynb  relocate_tracks.py
(+511 files in other folders)
