[project]
name = "diggy"
version = "0.1.0"
description = ""
authors = [
    {name = "Bienvenu",email = "williamb.bienvenu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrekordbox (>=0.4.4,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

