[project]
name = "diggy"
version = "0.1.0"
description = ""
authors = [
    {name = "Bienvenu",email = "williamb.bienvenu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrekordbox (>=0.4.4,<0.5.0)",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "requests (>=2.34.2,<3.0.0)",
    "mutagen>=1.47.0",
    "tidalapi>=0.8.0",
    "spotifyscraper>=3.7.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

